--- a/.github/workflows/CI-workflow.yml
+++ b/.github/workflows/CI-workflow.yml
@@ -44,13 +44,13 @@ jobs:
 
       - name: Push Image
         run: |
-          docker tag test_${{ github.run_number }}:v1 hashko/devsecopslab:v${{ github.run_number }}
-          docker push <dockeruser>/<dockerrepo>:v${{ github.run_number }}
+          docker tag test_${{ github.run_number }}:v1 sympatican/devsecopslab:v${{ github.run_number }}
+          docker push sympatican/<dockerrepo>:v${{ github.run_number }}
 
       - name: Checkout the ENV Repo
         uses: actions/checkout@v3
         with:
-          repository: '<dockeruser>/<dockerrepo>'
+          repository: 'sympatican/<dockerrepo>'
           ref: 'main'
           token:  ${{ secrets.GITLEAKS}}
 
@@ -60,7 +60,7 @@ jobs:
 
       - name: Edit manifests in ENV repo
         run: |
-          yq eval -i '.spec.template.spec.containers[0].image = "<dockeruser>/<dockerrepo>:v${{ github.run_number }}"' ./kubernetes/deployment.yaml
+          yq eval -i '.spec.template.spec.containers[0].image = "sympatican/<dockerrepo>:v${{ github.run_number }}"' ./kubernetes/deployment.yaml
 
       - name: Commit and Push to ENV repo
         run: |
