--- a/.github/workflows/CI-workflow.yaml
+++ b/.github/workflows/CI-workflow.yaml
@@ -67,3 +67,4 @@ jobs:
           git config  user.name "sympatican"
           git commit -a -m 'Env file is updated with the new image ${{ github.ref_name }}'
           git push https://${{ secrets.GITLEAKS }}@github.comsympatican/devosecopslab.git
+        # 'test'
